--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.2.2
   lottie: ^2.7.0
+  json_annotation: ^4.4.0
+  json_serializable: ^6.0.0
+  build_runner: ^2.0.0
+  copy_with_extension_gen: ^4.0.0
+  copy_with_extension: ^4.0.0
 
 dev_dependencies:
   flutter_test:
