--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   build_runner: ^2.0.0
   copy_with_extension_gen: ^4.0.0
   copy_with_extension: ^4.0.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
