--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.1.0
   audio_video_progress_bar: ^2.0.1
   audioplayers: ^5.2.1
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
