--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   audio_video_progress_bar: ^2.0.1
   audioplayers: ^5.2.1
   fluttertoast: ^8.2.4
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
