--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.2.2
   lottie: ^2.7.0
-  json_annotation: ^4.4.0
+  json_annotation: ^4.8.1
   json_serializable: ^6.0.0
   build_runner: ^2.0.0
   copy_with_extension_gen: ^4.0.0
@@ -49,6 +49,10 @@ dependencies:
   audioplayers: ^5.2.1
   fluttertoast: ^8.2.4
   intl: ^0.18.1
+  firebase_core: ^2.24.2
+  image_picker: ^1.0.4
+  firebase_storage: ^11.5.5
+  firebase_app_check: ^0.2.1+8
 
 dev_dependencies:
   flutter_test:
