--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   image_picker: ^1.0.4
   firebase_storage: ^11.5.5
   firebase_app_check: ^0.2.1+8
+  firebase_database: ^10.3.8
 
 dev_dependencies:
   flutter_test:
